-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.5.0-beta1
-
None
-
* Qt Creator from master, on commit 50a685f8d86f3282f0f47a26210e41204f23755e
* Build with Qt 5.4.0
Create a "Qt Console Application" from wizard, when clicked on "Finished" Qt Creatores crashes:
Thread 1 (Thread 0x7ffff7fc57c0 (LWP 9584)): #0 0x00007ffff5dfe5e9 in QString::operator=(QString const&) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Core.so.5 No symbol table info available. #1 0x00007ffff7079878 in QWidget::setToolTip(QString const&) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #2 0x00007fffe915bd4f in ProjectExplorer::Internal::ProjectWizardPage::setProjectToolTip (this=0x2787120, tt=...) at /home/nik/dev/creator/creator-com-master/qtcreator/src/plugins/projectexplorer/projectwizardpage.cpp:574 No locals. #3 0x00007fffe915bddf in ProjectExplorer::Internal::ProjectWizardPage::projectChanged (this=0x2787120, index=-1) at /home/nik/dev/creator/creator-com-master/qtcreator/src/plugins/projectexplorer/projectwizardpage.cpp:581 No locals. #4 0x00007fffe924f07c in ProjectExplorer::Internal::ProjectWizardPage::qt_static_metacall (_o=0x2787120, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0x7fffffffb3e0) at .moc/debug-shared/moc_projectwizardpage.cpp:90 _t = 0x2787120 #5 0x00007ffff5fd5e7a in QMetaObject::activate(QObject*, int, int, void**) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Core.so.5 No symbol table info available. #6 0x00007ffff715cc61 in QComboBox::currentIndexChanged(int) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #7 0x00007ffff715e2ee in ?? () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #8 0x00007ffff71620ea in ?? () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #9 0x00007ffff5fd5e7a in QMetaObject::activate(QObject*, int, int, void**) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Core.so.5 No symbol table info available. #10 0x00007ffff6052674 in QAbstractItemModel::rowsRemoved(QModelIndex const&, int, int, QAbstractItemModel::QPrivateSignal) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Core.so.5 No symbol table info available. #11 0x00007ffff5f52aaa in QAbstractItemModel::endRemoveRows() () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Core.so.5 No symbol table info available. #12 0x00007ffff78b39b9 in Utils::TreeItem::removeChildren (this=0x24aed10) at /home/nik/dev/creator/creator-com-master/qtcreator/src/libs/utils/treemodel.cpp:722 idx = {r = -1, c = -1, i = 0, m = 0x0} #13 0x00007ffff78b34e1 in Utils::TreeItem::~TreeItem (this=0x24aed10, __in_chrg=<optimized out>) at /home/nik/dev/creator/creator-com-master/qtcreator/src/libs/utils/treemodel.cpp:627 No locals. #14 0x00007fffe9160058 in ProjectExplorer::Internal::AddNewTree::~AddNewTree (this=0x24aed10, __in_chrg=<optimized out>) at /home/nik/dev/creator/creator-com-master/qtcreator/src/plugins/projectexplorer/projectwizardpage.cpp:68 No locals. #15 0x00007fffe9160088 in ProjectExplorer::Internal::AddNewTree::~AddNewTree (this=0x24aed10, __in_chrg=<optimized out>) at /home/nik/dev/creator/creator-com-master/qtcreator/src/plugins/projectexplorer/projectwizardpage.cpp:68 No locals. #16 0x00007ffff78b45d8 in Utils::TreeModel::~TreeModel (this=0x24aeb60, __in_chrg=<optimized out>) at /home/nik/dev/creator/creator-com-master/qtcreator/src/libs/utils/treemodel.cpp:881 No locals. #17 0x00007ffff78b4624 in Utils::TreeModel::~TreeModel (this=0x24aeb60, __in_chrg=<optimized out>) at /home/nik/dev/creator/creator-com-master/qtcreator/src/libs/utils/treemodel.cpp:882 No locals. #18 0x00007fffe915a80e in ProjectExplorer::Internal::ProjectWizardPage::~ProjectWizardPage (this=0x2787120, __in_chrg=<optimized out>) at /home/nik/dev/creator/creator-com-master/qtcreator/src/plugins/projectexplorer/projectwizardpage.cpp:341 No locals. #19 0x00007fffe915a882 in ProjectExplorer::Internal::ProjectWizardPage::~ProjectWizardPage (this=0x2787120, __in_chrg=<optimized out>) at /home/nik/dev/creator/creator-com-master/qtcreator/src/plugins/projectexplorer/projectwizardpage.cpp:342 No locals. #20 0x00007ffff5fd497a in QObjectPrivate::deleteChildren() () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Core.so.5 No symbol table info available. #21 0x00007ffff708bb17 in QWidget::~QWidget() () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #22 0x00007ffff718be69 in QFrame::~QFrame() () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #23 0x00007ffff5fd497a in QObjectPrivate::deleteChildren() () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Core.so.5 No symbol table info available. #24 0x00007ffff708bb17 in QWidget::~QWidget() () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #25 0x00007ffff728c9ae in ?? () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #26 0x00007ffff5fd497a in QObjectPrivate::deleteChildren() () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Core.so.5 No symbol table info available. #27 0x00007ffff708bb17 in QWidget::~QWidget() () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #28 0x00007ffff7834982 in Utils::Wizard::~Wizard (this=0x27c4740, __in_chrg=<optimized out>) at /home/nik/dev/creator/creator-com-master/qtcreator/src/libs/utils/wizard.cpp:345 No locals. #29 0x00007fffe919283a in Core::BaseFileWizard::~BaseFileWizard (this=0x27c4740, __in_chrg=<optimized out>) at /home/nik/dev/creator/creator-com-master/qtcreator/src/plugins/coreplugin/basefilewizard.h:40 No locals. #30 0x00007fffe919213c in ProjectExplorer::BaseProjectWizardDialog::~BaseProjectWizardDialog (this=0x27c4740, __in_chrg=<optimized out>) at /home/nik/dev/creator/creator-com-master/qtcreator/src/plugins/projectexplorer/baseprojectwizarddialog.cpp:102 No locals. #31 0x00007fffdaa4a40a in QmakeProjectManager::Internal::BaseQmakeProjectWizardDialog::~BaseQmakeProjectWizardDialog (this=0x27c4740, __in_chrg=<optimized out>) at /home/nik/dev/creator/creator-com-master/qtcreator/src/plugins/qmakeprojectmanager/wizards/qtwizard.cpp:181 No locals. #32 0x00007fffdaaa6379 in QmakeProjectManager::Internal::ConsoleAppWizardDialog::~ConsoleAppWizardDialog (this=0x27c4740, __in_chrg=<optimized out>) at .moc/debug-shared/../../../../../../../creator-com-master/qtcreator/src/plugins/qmakeprojectmanager/wizards/consoleappwizarddialog.h:41 No locals. #33 0x00007fffdaaa63b2 in QmakeProjectManager::Internal::ConsoleAppWizardDialog::~ConsoleAppWizardDialog (this=0x27c4740, __in_chrg=<optimized out>) at .moc/debug-shared/../../../../../../../creator-com-master/qtcreator/src/plugins/qmakeprojectmanager/wizards/consoleappwizarddialog.h:41 No locals. #34 0x00007fffeb10f2de in QScopedPointerDeleter<QWizard>::cleanup (pointer=0x27c4740) at /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/include/QtCore/qscopedpointer.h:54 No locals. #35 0x00007fffeb10e8a3 in QScopedPointer<QWizard, QScopedPointerDeleter<QWizard> >::~QScopedPointer (this=0x7fffffffbca0, __in_chrg=<optimized out>) at /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/include/QtCore/qscopedpointer.h:101 oldD = 0x27c4740 #36 0x00007fffeb10c656 in Core::BaseFileWizardFactory::runWizard (this=0x132fa70, path=..., parent=0x80f7e0, platform=..., extraValues=...) at /home/nik/dev/creator/creator-com-master/qtcreator/src/plugins/coreplugin/basefilewizardfactory.cpp:226 extensionList = {<QListSpecialMethods<Core::IFileWizardExtension*>> = {<No data fields>}, {p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x1e734e0}, d = 0x1e734e0}} firstExtensionPage = 0x2787120 dialogParameterFlags = {i = 0} files = {<QListSpecialMethods<Core::GeneratedFile>> = {<No data fields>}, {p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x24aead0}, d = 0x24aead0}} errorMessage = {static null = {<No data fields>}, d = 0x7ffff63ec880 <QArrayData::shared_null>} allExtensionPages = {<QListSpecialMethods<QWizardPage*>> = {<No data fields>}, {p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x27c4680}, d = 0x27c4680}} wizard = {d = 0x27c4740} removeOpenProjectAttribute = false #37 0x00007fffeb0e10d3 in Core::Internal::NewDialog::okButtonClicked (this=0x2703520) at /home/nik/dev/creator/creator-com-master/qtcreator/src/plugins/coreplugin/dialogs/newdialog.cpp:472 wizard = 0x132fa70 path = {static null = {<No data fields>}, d = 0xbc1360} #38 0x00007fffeb2012c6 in Core::Internal::NewDialog::qt_static_metacall (_o=0x2703520, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7fffffffbfe0) at .moc/debug-shared/moc_newdialog.cpp:89 _t = 0x2703520 #39 0x00007ffff5fd5e7a in QMetaObject::activate(QObject*, int, int, void**) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Core.so.5 No symbol table info available. #40 0x00007ffff72a78d5 in QAbstractItemView::doubleClicked(QModelIndex const&) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #41 0x00007ffff72a8a3f in QAbstractItemView::mouseDoubleClickEvent(QMouseEvent*) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #42 0x00007ffff7085256 in QWidget::event(QEvent*) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #43 0x00007ffff718c4c6 in QFrame::event(QEvent*) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #44 0x00007ffff72b2bcb in QAbstractItemView::viewportEvent(QEvent*) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #45 0x00007ffff5fa3eed in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Core.so.5 No symbol table info available. #46 0x00007ffff70498bf in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #47 0x00007ffff704d071 in QApplication::notify(QObject*, QEvent*) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #48 0x00007ffff5fa3c84 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Core.so.5 No symbol table info available. #49 0x00007ffff704bf88 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #50 0x00007ffff70a0387 in ?? () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #51 0x00007ffff70a2e78 in ?? () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #52 0x00007ffff70498f4 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #53 0x00007ffff704d506 in QApplication::notify(QObject*, QEvent*) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Widgets.so.5 No symbol table info available. #54 0x00007ffff5fa3c84 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Core.so.5 No symbol table info available. #55 0x00007ffff685c2af in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Gui.so.5 No symbol table info available. #56 0x00007ffff685cc65 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Gui.so.5 No symbol table info available. #57 0x00007ffff6841a88 in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Gui.so.5 No symbol table info available. #58 0x00007fffede7ebe0 in ?? () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/plugins/platforms/libqxcb.so No symbol table info available. #59 0x00007ffff4584e04 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0 No symbol table info available. #60 0x00007ffff4585048 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0 No symbol table info available. #61 0x00007ffff45850ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0 No symbol table info available. #62 0x00007ffff5ffe554 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Core.so.5 No symbol table info available. #63 0x00007ffff5fa1eab in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Core.so.5 No symbol table info available. #64 0x00007ffff5fa6dc5 in QCoreApplication::exec() () from /home/nik/usr/qt-5.4.0-install/5.4/gcc_64/lib/libQt5Core.so.5 No symbol table info available. #65 0x000000000040df90 in main (argc=3, argv=0x7fffffffe0f8) at /home/nik/dev/creator/creator-com-master/qtcreator/src/app/main.cpp:518 customPluginPaths = {<QList<QString>> = {<QListSpecialMethods<QString>> = {<No data fields>}, {p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x7ffff63ed0e0 <QListData::shared_null>}, d = 0x7ffff63ed0e0 <QListData::shared_null>}}, <No data fields>} arguments = {<QList<QString>> = {<QListSpecialMethods<QString>> = {<No data fields>}, {p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x69ead0}, d = 0x69ead0}}, <No data fields>} temporaryCleanSettingsDir = {d = 0x0} creatorTrPath = @0x7fffffffdb40: {static null = {<No data fields>}, d = 0x6a4dc0} globalSettings = 0x6a3390 uiLanguages = {<QList<QString>> = {<QListSpecialMethods<QString>> = {<No data fields>}, {p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x6a4540}, d = 0x6a4540}}, <No data fields>} r = 0 qtTranslator = <incomplete type> foundAppOptions = {d = 0x7ffff63ed180 <QMapDataBase::shared_null>} plugins = {<QListSpecialMethods<ExtensionSystem::PluginSpec*>> = {<No data fields>}, {p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x727160}, d = 0x727160}} coreplugin = 0x6bc4e0 threadCount = 12 settingsPath = {static null = {<No data fields>}, d = 0x6a2ca0} it = {c = 0x7fffffffda10, i = {i = 0x69eaf0}, n = {i = 0x69eaf0}} settings = 0x6a3330 translator = <incomplete type> pid = -1 isBlock = false app = {<QApplication> = {<No data fields>}, static staticMetaObject = {d = {superdata = 0x7ffff771d740 <QApplication::staticMetaObject>, stringdata = 0x413520 <qt_meta_stringdata_SharedTools__QtSingleApplication>, data = 0x4136c0 <qt_meta_data_SharedTools__QtSingleApplication>, static_metacall = 0x41163e <SharedTools::QtSingleApplication::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, firstPeer = 3293, instances = 0x69da70, pidPeer = 0x69e460, actWin = 0x0, appId = {static null = {<No data fields>}, d = 0x665a80}, block = false} testOptionProvided = false pluginManager = {<QObject> = {<No data fields>}, static staticMetaObject = {d = {superdata = 0x7ffff63e5cc0 <QObject::staticMetaObject>, stringdata = 0x7ffff7bc3640 <qt_meta_stringdata_ExtensionSystem__PluginManager>, data = 0x7ffff7bc3800 <qt_meta_data_ExtensionSystem__PluginManager>, static_metacall = 0x7ffff7bbe6a0 <ExtensionSystem::PluginManager::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}} overrideLanguage = {static null = {<No data fields>}, d = 0x7ffff63ec880 <QArrayData::shared_null>} pluginPaths = {<QList<QString>> = {<QListSpecialMethods<QString>> = {<No data fields>}, {p = {static shared_null = {ref = {atomic = {_q_value = -1}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x6a5040}, d = 0x6a5040}}, <No data fields>}