Fix crash on creating console project

Delete the model first, because doing so can emit signals that change
the ui.

Change-Id: I2af787423d09a95b5ffa4d712c83103058bad91f
Task-number: QTCREATORBUG-14321
Reviewed-by: Nikolai Kosjar <nikolai.kosjar@theqtcompany.com>